--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Diplomata+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +26,7 @@
             <div class='main-back'>
                 <div class='time'>
                     <div class="timer">
-                        <div class="dddd">TIME</div>
+                        <div id="startTime">1:00</div>
                     </div>
                 </div>
                 <div class="ddd">
