--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 </div>
                 <div class="ddd">
                     <div class="life">
-                        <div class="lifePerson1">
-                            <div></div>
+                        <div id="lifePerson1">
+
                         </div>
                     </div>
                     <div class="life">
-                        <div class="lifePerson2">
-                            <div></div>
+                        <div id="lifePerson2">
+
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
 
                 <div class="name">
                     <div id="namePerson1">
-                        <div class="name1">Ryu Hoshi </div>
+                        <div class="name1">Ryu Hosh </div>
                     </div>
                     <div id="namePeron2">
                         <div class="name2">AKUMA </div>
@@ -55,10 +55,10 @@
 
                 <div class="person">
                     <div id="firstPerson">
-                        <img src="person1.png" height="400px" alt="">
+                        <img src="person1.png" height="370px" alt="">
                     </div>
                     <div id="secondPerson">
-                        <img src="person2.png" height="450px" alt="">
+                        <img src="person2.png" height="420px" alt="">
                     </div>
                 </div>
             </div>
