--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
 
 <body>
 
+
+
+
+
+
     <div class='main'>
         <div class='container'>
             <div class='main-back'>
+
                 <div class='time'>
                     <div class="timer">
                         <div id="startTime">1:00</div>
@@ -65,6 +71,30 @@
         </div>
     </div>
 
+    <button id="createPerson" onclick="showModal()"> Create your person </button>
+    <div id="mood">
+        <div id="modalNewPerson">
+            <div id="modal-content">
+                <form id="newPerson">
+                    health: <input type="number" , id="newHealth" class="content" oninput="myFunction1(this.value)" />
+                    <br><br>
+                    strength: <input type="number" , id="newStrength" class="content"
+                        oninput="myFunction2(this.value)" />
+                    <br><br>
+                    armor: <input type="number" , id="newArmor" class="content" oninput="myFunction3(this.value)"" />
+                    <br><br>
+                    power: <input type=" number" , id="newPower" class="content" oninput="myFunction4(this.value)" />
+                    <br><br>
+                    number persone: <select id="mySelect" onchange="myFunction5()">
+                        <option value="Persone1">Persone 1</option>
+                        <option value="Persone2">Persone 2</option>
+                    </select>
+                    <br><br>
+                    <input type="button" , id="create" , value="Create" , onclick="closeModal()">
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="js.js"></script>
 </body>
 
