--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <br><br>
                     power: <input type=" number" , id="newPower" class="content" oninput="myFunction4(this.value)" />
                     <br><br>
-                    number persone: <select id="mySelect" onchange="myFunction5()">
+                    number persone: <select id="mySelect" onchange="selectFunction()">
                         <option value="Persone1">Persone 1</option>
                         <option value="Persone2">Persone 2</option>
                     </select>
